--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Messji</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="activity_title_contacts">New Conversation</string>
 </resources>
