--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Messji</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="activity_title_contacts">New Conversation</string>
+    <string name="contacts_description">Choose from the list below a contact that you want to talk to:</string>
 </resources>
